@@ -9,21 +9,22 @@ import axiosRetry from 'axios-retry';
 /**
  * Internal dependencies
  */
-import {
-    projectPath,
-    runCmd
-} from '../index.js';
-
 const endpoint = '/wp-json/wp/v2';
-const requestDelay = 7500; // we wait 5 seconds between requests
-const sleep = (waitTimeInMs) => new Promise(resolve => setTimeout(resolve, waitTimeInMs));
+const syncEndpoint = '/wp-json/caweb/v1/sync';
 
+// Axios Configurations.
 axiosRetry(axios, 
     { 
         retries: 3, // attempt requests 3 times
         shouldResetTimeout: true, // reset timeout on retries
-        retryCondition: (error) => true, // retry on any error
-        retryDelay: (retryCount) => 5000 // retry delay
+        retryCondition: (error) => { 
+            if( error.response && error.response.status === 500 ){
+                return true;
+            }
+        }, // retry on any network or 5xx error
+        retryDelay: (retryCount, error ) => {
+            return 5000 // retry delay
+        }
     }
 );
 
@@ -113,12 +114,13 @@ async function getTaxonomies( request, tax = 'pages' ){
         urlParams.push( 'menus=' + processUrlParam( request.menus ) );
     }
 
-    // if per page argument.
-    urlParams.push( 'per_page=' + request.per_page ? request.per_page : '100' )
-
-
-    // if posts_per_page argument.
-    urlParams.push( 'posts_per_page=' + request.posts_per_page ? request.posts_per_page : '10' )
+    /**
+     * The per_page parameter is capped at 100.
+     * 
+     * @see https://developer.wordpress.org/rest-api/using-the-rest-api/pagination/
+     */
+    request.per_page = request.per_page && request.per_page <= 100 ? request.per_page : 100;
+    urlParams.push( 'per_page=' + request.per_page  );
 
 
     let collection = [];
@@ -238,7 +240,6 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
         // make WordPress REST API request.
         let results = await axios.request({
                 ...request,
-                timeout: requestDelay,
                 data: 'media' === tax ? createMediaItem(obj) : obj,
                 url
             })
@@ -251,8 +252,7 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
 
             await axios.request({
                 ...request,
-                url: `${request.url}/wp-json/caweb-dev/v1/sync`,
-                timeout: requestDelay,
+                url: `${request.url}${syncEndpoint}`,
                 data: {
                     id: results.id,
                     newId: existingID,
