@@ -1,4 +1,7 @@
 v1.3.2
+- Removed timeout from requests
+- Removed ssh, posts_per_page param from being added to every request
+- Updated sync endpoint reference
 - Removed wp-cli.phar
 - Sync uses CAWebPublishing Development Plugin to maintain ID's
 - Fixed issue with webpack publicPath not referencing correct path location 
